--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,9 @@
-DB_HOST=127.0.0.1
-DB_USER=root
-DB_PASSWORD=
+NODE_ENV=production
+DB_HOST=153.92.15.2
+DB_USER=u590239395_ggh
+DB_PASSWORD=GGHSoftware@2025
 DB_NAME=u590239395_gis
 DB_PORT=3306
-PORT=9100
+PORT=5000
 JWT_SECRET=secret123!
 DB_CONNECTION=mysql
