--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.0",
+    "diff": "^8.0.2",
     "leaflet": "^1.9.4",
     "ol": "^8.2.0",
     "react": "^19.0.0-rc.1",
